--- a/src/index.css
+++ b/src/index.css
@@ -13,16 +13,11 @@
   src: url(/src/assets/fonts/OpenSans-Bold.ttf);
 }
 
-* h1, h2{
+* h1, h2, h3, h5, h4{
   font-family: Montserrat;
   color: #3b82f6;
 }
 
-* p, li, a {
+* p, li, a, ul, span {
   font-family: OpenSans;
-}
-
-:root {
-  font-family: "Montserrat", sans-serif;
-  /* color-scheme: dark; */
 }
